# fogos-portugal

./: .gitconfig  README.md  caddyfile  docker-compose.yml  fogos.json
.github/workflows/: scrape-fires.yml
backend/: .dockerignore  Dockerfile  bd_creator.py  bd_manager.py  pyproject.toml  server.py
frontend/: .dockerignore  .env.production  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/app/: api-types.ts  api.ts  store.ts
frontend/src/components/: charts-date-range.tsx
frontend/src/components/metrics/: district-count.tsx  fire-duration.tsx  fires-per-month.tsx  most-affected-district.tsx  total-fires.tsx  worst-day.tsx
frontend/src/components/metrics/building-blocks/: bar-chart-counts.tsx  number-over-time.tsx  single-value.tsx
frontend/src/components/ui/: date-picker.tsx
frontend/src/features/date-range/: dateRangeSlice.ts
