[project]
name = "fogos-portugal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "gitpython>=3.1.44",
    "numpy>=1.24.4",
    "pygit>=0.1",
    "pygit2>=1.13.3",
    "sqlalchemy>=2.0.40",
]
